force-app/main/default/objects/Expo_Data_List__c/Expo_Data_List__c.object-meta.xml
<CustomObject>
    <description>统筹数据下拉列表</description>
    <label>Expo Data List</label>
    <nameField>
        <displayFormat>SOI-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expo Data Lists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>