force-app/main/default/objects/Expo_Data_List__c/fields/Contact_NameCN__c.field-meta.xml
<CustomField>
    <fullName>Contact_NameCN__c</fullName>
    <label>Contact NameCN</label>
    <length>50</length>
    <type>Text</type>
</CustomField>