force-app/main/default/objects/Expo_Data_List__c/fields/Contact_NameEN__c.field-meta.xml
<CustomField>
    <fullName>Contact_NameEN__c</fullName>
    <label>Contact NameEN</label>
    <length>50</length>
    <type>Text</type>
</CustomField>