force-app/main/default/objects/Expo_Data_List__c/fields/Data_Name_EN__c.field-meta.xml
<CustomField>
    <fullName>Data_Name_EN__c</fullName>
    <label>Data Name EN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>