force-app/main/default/objects/Expo_Data_List__c/fields/Exhibition_Management__c.field-meta.xml
<CustomField>
    <fullName>Exhibition_Management__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Exhibition Management</label>
    <referenceTo>ExpoInfo__c</referenceTo>
    <relationshipLabel>Expo Data Lists</relationshipLabel>
    <relationshipName>Expo_Data_Lists</relationshipName>
    <type>Lookup</type>
</CustomField>